--- a/index.html
+++ b/index.html
@@ -2,45 +2,225 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fetch /terms Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tren API Frontend · Tailwind</title>
+  <!-- Tailwind Play CDN (no build step needed) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    // Optional: customize Tailwind (just a tiny tweak)
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            brand: {
+              50: '#f0f7ff',
+              500: '#2563eb'
+            }
+          }
+        }
+      }
+    }
+  </script>
 </head>
-<body>
-  <h1>Fetch https://mil.psy.ntu.edu.tw:5000/terms</h1>
-  <button id="btn">Fetch again</button>
-  <pre id="out">Loading…</pre>
+<body class="min-h-screen bg-slate-50 text-slate-800">
+  <header class="border-b bg-white/70 backdrop-blur supports-[backdrop-filter]:bg-white/60 sticky top-0 z-10">
+    <div class="max-w-5xl mx-auto px-4 py-4 flex items-center justify-between">
+      <h1 class="text-xl sm:text-2xl font-semibold tracking-tight">Tren API Frontend</h1>
+      <a href="https://mil.psy.ntu.edu.tw:5000" target="_blank" class="text-sm text-brand-500 hover:underline">Backend @ :5000</a>
+    </div>
+  </header>
+
+  <main class="max-w-5xl mx-auto px-4 py-6 space-y-6">
+    <!-- Helper / tips -->
+    <div class="rounded-xl border bg-white p-4 sm:p-5">
+      <p class="text-sm text-slate-600">
+        使用 <span class="font-medium">AJAX (fetch)</span> 
+        <code class="px-1 py-0.5 rounded bg-slate-100">/terms</code>,
+        <code class="px-1 py-0.5 rounded bg-slate-100">/terms/&lt;t1&gt;</code>,
+        <code class="px-1 py-0.5 rounded bg-slate-100">/query/&lt;q&gt;/studies</code>
+      </p>
+    </div>
+
+    <!-- Controls -->
+    <section class="grid gap-4 sm:grid-cols-2">
+      <!-- (1) All terms -->
+      <div class="rounded-xl border bg-white p-4 sm:p-5 space-y-3">
+        <h2 class="text-lg font-semibold">1) 取得所有 Terms</h2>
+        <button id="btnAll" class="inline-flex items-center gap-2 rounded-lg bg-brand-500 px-4 py-2 text-white shadow hover:shadow-md transition">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 24 24" fill="currentColor"><path d="M3 5h18v2H3zM3 11h18v2H3zM3 17h18v2H3z"/></svg>
+          Get all terms
+        </button>
+        <p class="text-xs text-slate-500">呼叫 <code>/terms</code></p>
+      </div>
+
+      <!-- (2) Related terms -->
+      <div class="rounded-xl border bg-white p-4 sm:p-5 space-y-3">
+        <h2 class="text-lg font-semibold">2) 查某 term 的相關 terms</h2>
+        <div class="flex items-center gap-2">
+          <input id="termInput" type="text" placeholder="e.g. emotion" class="w-full rounded-lg border px-3 py-2 focus:outline-none focus:ring-2 focus:ring-brand-500" />
+          <button id="btnTerm" class="rounded-lg border px-4 py-2 hover:bg-slate-50">Search</button>
+        </div>
+        <p class="text-xs text-slate-500">呼叫 <code>/terms/&lt;t1&gt;</code>，常見格式像 <code>{"emotion": ["sadness", ...]}</code></p>
+      </div>
+
+      <!-- (3) Query studies -->
+      <div class="rounded-xl border bg-white p-4 sm:p-5 space-y-3 sm:col-span-2">
+        <h2 class="text-lg font-semibold">3) 以關鍵字搜尋 Studies</h2>
+        <div class="flex flex-col sm:flex-row items-stretch sm:items-center gap-2">
+          <input id="queryInput" type="text" placeholder="e.g. empathy" class="flex-1 rounded-lg border px-3 py-2 focus:outline-none focus:ring-2 focus:ring-brand-500" />
+          <button id="btnStudy" class="rounded-lg bg-slate-800 px-4 py-2 text-white hover:bg-slate-900">Search studies</button>
+        </div>
+        <p class="text-xs text-slate-500">呼叫 <code>/query/&lt;q&gt;/studies</code>，回傳研究清單。</p>
+      </div>
+    </section>
+
+    <!-- Output / status -->
+    <section class="rounded-xl border bg-white overflow-hidden">
+      <div class="border-b bg-slate-50/70 px-4 py-2 text-sm text-slate-600 flex items-center justify-between">
+        <div id="status">Ready.</div>
+        <div class="flex items-center gap-2">
+          <span class="hidden sm:inline">View:</span>
+          <div class="inline-flex rounded-lg overflow-hidden border">
+            <button id="viewPretty" class="px-3 py-1.5 text-sm bg-white hover:bg-slate-100">Pretty</button>
+            <button id="viewRaw" class="px-3 py-1.5 text-sm hover:bg-slate-100">Raw JSON</button>
+          </div>
+        </div>
+      </div>
+      <div id="out" class="p-4 text-sm font-mono whitespace-pre-wrap overflow-auto max-h-[60vh]"></div>
+    </section>
+  </main>
+
+  <footer class="max-w-5xl mx-auto px-4 py-10 text-center text-xs text-slate-500">
+    Built with Tailwind + fetch (AJAX). No extra installs required. Deploy on GitHub Pages.
+  </footer>
 
   <script>
-    async function fetchTerms() {
-      const out = document.getElementById('out');
-      out.textContent = 'Requesting…';
+    const API_BASE = 'https://mil.psy.ntu.edu.tw:5000';
+    const statusEl = document.getElementById('status');
+    const outEl = document.getElementById('out');
+    const viewPrettyBtn = document.getElementById('viewPretty');
+    const viewRawBtn = document.getElementById('viewRaw');
+
+    let lastData = null; // keep last JSON for switching views
+
+    function setStatus(msg) {
+      statusEl.textContent = msg;
+    }
+
+    function spinner(msg = 'Loading…') {
+      outEl.innerHTML = `
+        <div class="flex items-center gap-3 text-slate-600">
+          <svg class="animate-spin h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <circle class="opacity-25" cx="12" cy="12" r="10" stroke-width="4"></circle>
+            <path class="opacity-75" d="M4 12a8 8 0 018-8" stroke-width="4" stroke-linecap="round"></path>
+          </svg>
+          <span>${msg}</span>
+        </div>`;
+    }
+
+    function renderPretty(data) {
+      // Render arrays of strings as tag list; objects as key sections; otherwise JSON
+      if (Array.isArray(data) && data.every(x => typeof x === 'string')) {
+        outEl.innerHTML = `
+          <div class="flex flex-wrap gap-2">
+            ${data.map(t => `<span class="inline-flex items-center rounded-full bg-slate-100 px-3 py-1 text-xs">${escapeHTML(t)}</span>`).join('')}
+          </div>`;
+        return;
+      }
+
+      if (data && typeof data === 'object' && !Array.isArray(data)) {
+        outEl.innerHTML = Object.entries(data).map(([k, v]) => {
+          if (Array.isArray(v)) {
+            return `
+              <div class="mb-4">
+                <h3 class="text-sm font-semibold text-slate-700 mb-2">${escapeHTML(k)}</h3>
+                <div class="flex flex-wrap gap-2">
+                  ${v.map(x => `<span class="inline-flex items-center rounded-full bg-slate-100 px-3 py-1 text-xs">${escapeHTML(String(x))}</span>`).join('')}
+                </div>
+              </div>`;
+          }
+          return `
+            <div class="mb-4">
+              <h3 class="text-sm font-semibold text-slate-700 mb-2">${escapeHTML(k)}</h3>
+              <pre class="bg-slate-50 border rounded p-3 overflow-auto">${escapeHTML(JSON.stringify(v, null, 2))}</pre>
+            </div>`;
+        }).join('');
+        return;
+      }
+
+      // Fallback
+      outEl.innerHTML = `<pre class="bg-slate-50 border rounded p-3 overflow-auto">${escapeHTML(JSON.stringify(data, null, 2))}</pre>`;
+    }
+
+    function renderRaw(data) {
+      outEl.textContent = JSON.stringify(data, null, 2);
+    }
+
+    function escapeHTML(s) {
+      return String(s)
+        .replaceAll('&', '&amp;')
+        .replaceAll('<', '&lt;')
+        .replaceAll('>', '&gt;')
+        .replaceAll('"', '&quot;')
+        .replaceAll("'", '&#39;');
+    }
+
+    async function fetchJSON(path) {
+      const url = `${API_BASE}${path}`;
+      setStatus(`GET ${url}`);
+      spinner('Fetching…');
       try {
-        const resp = await fetch('https://mil.psy.ntu.edu.tw:5000/terms');
-        let info = `HTTP ${resp.status} ${resp.statusText}\n`;
+        const resp = await fetch(url);
         const ct = resp.headers.get('content-type') || '';
+        const info = `HTTP ${resp.status} ${resp.statusText}`;
 
         if (!resp.ok) {
           const text = await resp.text();
-          out.textContent = info + '\n' + text;
+          outEl.innerHTML = `<div class="text-red-600 text-sm">${escapeHTML(info)}</div><pre class="mt-2 bg-red-50 border border-red-200 rounded p-3 overflow-auto">${escapeHTML(text)}</pre>`;
           return;
         }
 
         if (ct.includes('application/json')) {
-          const data = await resp.json();
-          out.textContent = info + '\n' + JSON.stringify(data, null, 2);
+          lastData = await resp.json();
         } else {
-          const text = await resp.text();
-          out.textContent = info + '\n' + text;
+          lastData = await resp.text();
         }
+
+        setStatus(`${info} · ${url}`);
+        renderPretty(lastData);
       } catch (err) {
-        document.getElementById('out').textContent =
-          'Error: ' + (err && err.message ? err.message : String(err)) +
-          '\n\nCommon causes:\n1) CORS not allowed by the server\n2) Opening this file via file:// instead of a local server\n3) Network/server issues';
+        outEl.innerHTML = `<div class="text-red-600 text-sm">Error: ${escapeHTML(err?.message || String(err))}</div>
+        <pre class="mt-2 bg-red-50 border border-red-200 rounded p-3 overflow-auto">Common causes:\n1) CORS not allowed by the server\n2) Opening via file:// instead of http(s)\n3) Network/server issues</pre>`;
       }
     }
 
-    document.getElementById('btn').addEventListener('click', fetchTerms);
-    fetchTerms();
+    // Wire up controls
+    document.getElementById('btnAll').addEventListener('click', () => fetchJSON('/terms'));
+    document.getElementById('btnTerm').addEventListener('click', () => {
+      const term = document.getElementById('termInput').value.trim();
+      if (!term) { setStatus('請輸入一個 term'); return; }
+      fetchJSON(`/terms/${encodeURIComponent(term)}`);
+    });
+    document.getElementById('btnStudy').addEventListener('click', () => {
+      const q = document.getElementById('queryInput').value.trim();
+      if (!q) { setStatus('請輸入查詢字串'); return; }
+      fetchJSON(`/query/${encodeURIComponent(q)}/studies`);
+    });
+
+    // View toggle
+    viewPrettyBtn.addEventListener('click', () => {
+      if (lastData == null) return; renderPretty(lastData);
+      viewPrettyBtn.classList.add('bg-white');
+      viewRawBtn.classList.remove('bg-white');
+    });
+    viewRawBtn.addEventListener('click', () => {
+      if (lastData == null) return; renderRaw(lastData);
+      viewRawBtn.classList.add('bg-white');
+      viewPrettyBtn.classList.remove('bg-white');
+    });
+
+    // Initial message
+    outEl.innerHTML = '<div class="text-slate-600 text-sm">Ready. 選擇上方操作以開始。</div>';
   </script>
 </body>
 </html>
-
