save unsaved changes

--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
     // ---------- A–Z filter for /terms (single box) ----------
     let TERMS_CACHE = [];     // all terms
     let TERMS_FILTER = 'all'; // 'all' or 'a'..'z'
+    async function ensureTermsCache(){
+      if (Array.isArray(TERMS_CACHE) && TERMS_CACHE.length > 0) return;
+      try {
+        const data = await fetchJSON('/terms');
+        TERMS_CACHE = Array.isArray(data) ? data
+                    : (data && Array.isArray(data.terms) ? data.terms : []);
+      } catch (e) {
+        console.warn('ensureTermsCache failed:', e);
+      }
+    }
 
     function renderAlphaBar(){
       const letters = ['All', ...'ABCDEFGHIJKLMNOPQRSTUVWXYZ'];
@@ -298,9 +308,110 @@
           </table>
         </div>`;
     }
+    function setupAutocomplete({ inputSelector, mode = 'term', maxItems = 8 }) {
+      const input = document.querySelector(inputSelector);
+      if (!input) return;
+
+      // 容器（絕對定位 dropdown）
+      const wrap = document.createElement('div');
+      wrap.className = 'relative flex-1';
+      input.classList.add('w-full');
+      input.parentNode.insertBefore(wrap, input);
+      wrap.appendChild(input);
+
+      const dropdown = document.createElement('div');
+      dropdown.className = 'absolute left-0 right-0 top-full mt-1 z-50 bg-white border rounded shadow max-h-64 overflow-auto hidden';
+      wrap.appendChild(dropdown);
+
+      let items = [];
+      let active = -1;
+      let hideTimer;
+
+      const norm = s => String(s || '').toLowerCase();
+      const stopWords = new Set(['and','not']);
+
+      function currentTokenInfo() {
+        const raw = input.value;
+        if (mode === 'term') return { before: '', token: raw.trim(), after: '' };
+
+        // studies 模式：只對最後 token
+        const parts = raw.split(/\s+/);
+        const token = parts.pop() || '';
+        const before = parts.join(' ');
+        return { before, token, after: '' };
+      }
+
+      function applySuggestion(s) {
+        if (mode === 'term') {
+          input.value = s;
+        } else {
+          const { before } = currentTokenInfo();
+          input.value = (before ? before + ' ' : '') + s;
+        }
+        close();
+        input.dispatchEvent(new Event('input'));
+      }
+
+      function render() {
+        dropdown.innerHTML = items.map((t, i) => `
+          <div data-idx="${i}"
+              class="px-3 py-2 text-sm cursor-pointer ${i===active ? 'bg-brand-500 text-white' : 'hover:bg-slate-100'}">
+            ${t}
+          </div>`).join('');
+        dropdown.classList.toggle('hidden', items.length === 0);
+        dropdown.querySelectorAll('[data-idx]').forEach(el => {
+          el.addEventListener('mousedown', e => { // 用 mousedown 可避免 blur 把選取打斷
+            e.preventDefault();
+            applySuggestion(items[Number(el.dataset.idx)]);
+          });
+        });
+      }
+
+      function close(){ dropdown.classList.add('hidden'); items = []; active = -1; }
+      function move(dir){
+        if (items.length === 0) return;
+        active = (active + dir + items.length) % items.length;
+        render();
+      }
+
+      const doSuggest = debounce(async () => {
+        await ensureTermsCache();
+        const { token } = currentTokenInfo();
+        const q = norm(token);
+
+        // 不建議空字串 / and / not
+        if (!q || stopWords.has(q)) { close(); return; }
+
+        const pool = TERMS_CACHE || [];
+        items = pool.filter(t => norm(t).startsWith(q)).slice(0, maxItems);
+        active = items.length ? 0 : -1;
+        render();
+      }, 120);
+
+      input.addEventListener('input', doSuggest);
+      input.addEventListener('keydown', (e) => {
+        if (dropdown.classList.contains('hidden')) return;
+        if (e.key === 'ArrowDown'){ e.preventDefault(); move(+1); }
+        else if (e.key === 'ArrowUp'){ e.preventDefault(); move(-1); }
+        else if (e.key === 'Enter'){ 
+          if (active >= 0){ e.preventDefault(); applySuggestion(items[active]); }
+        }
+        else if (e.key === 'Escape'){ close(); }
+      });
+      input.addEventListener('blur', () => { hideTimer = setTimeout(close, 150); });
+      input.addEventListener('focus', () => { clearTimeout(hideTimer); doSuggest(); });
+    }
+
+    // 小工具：debounce
+    function debounce(fn, ms=100){
+      let t; return (...args)=>{ clearTimeout(t); t=setTimeout(()=>fn(...args), ms); };
+    }
+
 
     // ---------- Wire-up ----------
     document.addEventListener('DOMContentLoaded', () => {
+      setupAutocomplete({ inputSelector: '#termInput',  mode: 'term'    });   // 整欄建議
+      setupAutocomplete({ inputSelector: '#studyInput', mode: 'studies' });   // 最後 token 建議
       // load all terms
       $('#btnAll')?.addEventListener('click', async () => {
         $('#allTerms').innerHTML = spinner('Loading all terms…');
